objects/Monthly_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Monthly Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Month_Year__c</fullName>
        <label>Budget Month Year</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(
  MONTH(  Date__c ),
  1, &quot;January&quot;,
  2, &quot;February&quot;,
  3, &quot;March&quot;,
  4, &quot;April&quot;,
  5, &quot;May&quot;,
  6, &quot;June&quot;,
  7, &quot;July&quot;,
  8, &quot;August&quot;,
  9, &quot;September&quot;,
  10, &quot;October&quot;,
  11, &quot;November&quot;,
  &quot;December&quot;
) 

  +&apos; &apos;+TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <label>Monthly Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Budget_Month_Year__c</columns>
        <columns>Date__c</columns>
        <columns>Month__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Monthly Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>